syntax = "proto3";
package kava.earn.v1beta1;

option go_package = "github.com/kava-labs/kava/x/earn/types";

import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

enum StrategyType {
  option (gogoproto.goproto_enum_prefix) = false;

  STRATEGY_TYPE_UNKNOWN = 0;
  STRATEGY_TYPE_HARD    = 1;
  STRATEGY_TYPE_SAVINGS = 2;
}
